--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@commitlint/config-conventional": "^17.1.0",
     "@graphprotocol/graph-cli": "^0.34.0",
     "@graphprotocol/graph-ts": "^0.28.0",
+    "@types/node": "^18.15.0",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "eslint": "^8.24.0",
@@ -36,5 +37,8 @@
     "matchstick-as": "^0.5.0",
     "prettier": "^2.7.1",
     "typescript": "^4.8.4"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
