--- a/package.json
+++ b/package.json
@@ -20,23 +20,23 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@looksrare/sdk": "^0.8.3"
+    "@looksrare/sdk": "0.8.3"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
-    "@graphprotocol/graph-cli": "^0.34.0",
-    "@graphprotocol/graph-ts": "^0.28.0",
+    "@commitlint/cli": "^17.5.0",
+    "@commitlint/config-conventional": "^17.4.0",
+    "@graphprotocol/graph-cli": "^0.45.0",
+    "@graphprotocol/graph-ts": "^0.29.0",
     "@types/node": "^18.15.0",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "@typescript-eslint/parser": "^5.39.0",
-    "eslint": "^8.24.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.0",
-    "lerna": "^5.5.4",
+    "lerna": "^6.6.0",
     "matchstick-as": "^0.5.0",
-    "prettier": "^2.7.1",
-    "typescript": "^4.8.4"
+    "prettier": "^2.8.0",
+    "typescript": "^5.0.0"
   },
   "engines": {
     "node": "18.x"
