--- a/package.json
+++ b/package.json
@@ -10,33 +10,33 @@
     "subgraphs/**/*"
   ],
   "scripts": {
-    "codegen": "lerna run codegen",
     "build:goerli": "lerna run build:goerli",
     "build:mainnet": "lerna run build:mainnet",
+    "codegen": "lerna run codegen",
     "format:check": "prettier --check '*/**/*.{js,ts,yaml,yml,json}'",
     "format:write": "prettier --write '*/**/*.{js,ts,yaml,yml,json}'",
     "lint": "eslint '*/**/*.{js,ts}'",
-    "test": "lerna run test:lerna",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "lerna run test:lerna"
   },
   "dependencies": {
-    "@looksrare/sdk": "^0.8.3"
+    "@looksrare/sdk": "^0.12.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
+    "@commitlint/cli": "^17.5.0",
+    "@commitlint/config-conventional": "^17.4.0",
     "@graphprotocol/graph-cli": "^0.34.0",
     "@graphprotocol/graph-ts": "^0.28.0",
     "@types/node": "^18.15.0",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "@typescript-eslint/parser": "^5.39.0",
-    "eslint": "^8.24.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.0",
-    "lerna": "^5.5.4",
+    "lerna": "^6.6.0",
     "matchstick-as": "^0.5.0",
-    "prettier": "^2.7.1",
-    "typescript": "^4.8.4"
+    "prettier": "^2.8.0",
+    "typescript": "^4.9.0"
   },
   "engines": {
     "node": "18.x"
