--- a/subgraphs/eip1155/package.json
+++ b/subgraphs/eip1155/package.json
@@ -9,7 +9,7 @@
     "codegen": "graph codegen subgraph.yaml",
     "build:goerli": "graph build subgraph.yaml --network goerli",
     "build:mainnet": "graph build subgraph.yaml --network mainnet",
-    "deploy:goerli": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ 0xjurassicpunk/eip1155 subgraph.yaml --network goerli",
-    "deploy:mainnet": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ looksrare/eip1155 subgraph.yaml --network mainnet"
+    "deploy:goerli": "graph deploy --product hosted-service 0xjurassicpunk/eip1155 subgraph.yaml --network goerli",
+    "deploy:mainnet": "graph deploy --product hosted-service looksrare/eip1155 subgraph.yaml --network mainnet"
   }
 }
