--- a/subgraphs/raffle/v1/package.json
+++ b/subgraphs/raffle/v1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "raffle",
+  "name": "raffle-v1",
   "description": "LooksRare Subgraph",
   "version": "1.0.0",
   "repository": "git@github.com:looksrare/subgraph.git",
