--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "codegen": "lerna run codegen",
     "format:check": "prettier --check '*/**/*.{js,ts,yaml,yml,json}'",
     "format:write": "prettier --write '*/**/*.{js,ts,yaml,yml,json}'",
-    "lint": "eslint '*/**/*.{js,ts}'",
+    "lint": "eslint '**/**/*.{js,ts}'",
     "prepare": "husky install",
     "test": "lerna run test:lerna"
   },
@@ -25,18 +25,18 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.0",
     "@commitlint/config-conventional": "^17.6.0",
-    "@graphprotocol/graph-cli": "^0.48.0",
-    "@graphprotocol/graph-ts": "^0.29.0",
-    "@types/node": "^18.15.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
-    "eslint": "^8.39.0",
-    "eslint-config-prettier": "^8.8.0",
+    "@graphprotocol/graph-cli": "^0.53.0",
+    "@graphprotocol/graph-ts": "^0.31.0",
+    "@types/node": "^18",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.9.0",
     "husky": "^8.0.0",
-    "lerna": "^6.6.0",
+    "lerna": "^7.1.0",
     "matchstick-as": "^0.5.0",
-    "prettier": "^2.8.0",
-    "typescript": "^4.9.0"
+    "prettier": "^3.0.0",
+    "typescript": "^4.9.5"
   },
   "engines": {
     "node": "18.x"
