--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,4 @@
 {
-  "extends": "./node_modules/@graphprotocol/graph-ts/tsconfig.json",
-  "compilerOptions": {
-    "types": ["@graphprotocol/graph-ts"]
-  }
+  "extends": "@graphprotocol/graph-ts/types/tsconfig.base.json",
+  "include": ["subgraphs"],
 }
